1.9.12	2012/01/05

	* SSLEngine: do not reuse between connections
	* ServerBuilder.Server: localAddress to get ephemeral port values
	* More detailed client stats
	* kestrel: parse parseStatsLines
	* FailFastFactory: new fast-fail strategy with maxOutstandingConnections
	* exceptions: add peer information to connection failures, add service name to all exceptions
	* fixes: space leak in stats, ReliableDuplexFilter lazy load ordering
	* b3: allow the user to specify sample rate
	* exception reporter: share scribe connection across instances
	* finagle-ostrich: remove, it's obsoleted by finagle-ostrich4
 
1.9.10	2011/12/02

	* update to util 1.12.7

1.9.9		2011/12/01

	* update to util 1.12.6

1.9.8		2011/11/30

	* upgrade to netty 3.2.7.Final
	* streaming: support HTTP/1.0
	* native: fix content-length header

1.9.7		2011/11/29


	* http: Propagate CancelledRequestException rather than
	continuing
	* thrift: deprecated LookupContext, using
	finagle.thrift.ClientId
	* use monitors where applicable (composable widgets for
	handling exceptions)
	* memcache: PHPMemCacheClient
	* make RetryingFilter usable from Java
	* thrift: convert uncaught application exceptions into
	TApplicationExceptions on the wire
	* NoStacktrace.getStackTrace() returns non-empty stacktrace
	array
	* kill off openConnectionsHealthThresholds (unused)

1.9.6		2011/11/08

	* SSL: make native provider bootstrapping code work; refactor
	'Ssl' singleton
	* tracing: Update configurations and libraries to use tracer
	factory introduced to make it possible to release resources
	properly in tracers
	* finagle-thrift: connection options + client id
	* a more flexible retry filter

1.9.5		2011/11/04

	* ExpiringService: add stats for idle and lifetime expiration.
	Deactivate() regardless of latch counter
	* Filters: don't apply refcounts on composition, do it only
	(and always) in the builder
	* Count pending timeouts, and export them
	* ChannelService: release services when `prepareChannel`